--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "language-swift",
-  "version": "0.4.0",
-  "description": "Swift language support in Atom",
+  "name": "language-swift3",
+  "version": "0.1.0",
+  "description": "Swift 3 language support in Atom",
   "license": "MIT",
-  "homepage": "https://github.com/darinmorrison/atom-language-swift",
-  "repository": "https://github.com/darinmorrison/atom-language-swift",
+  "homepage": "https://github.com/rafaelc0sta/atom-language-swift",
+  "repository": "https://github.com/rafaelc0sta/atom-language-swift",
   "engines": {
     "atom": ">= 0.100.0"
   },
   "bugs": {
-    "url": "https://github.com/darinmorrison/atom-language-swift/issues"
+    "url": "https://github.com/rafaelc0sta/atom-language-swift/issues"
   }
 }
